--- a/math.bib
+++ b/math.bib
@@ -136,7 +136,7 @@ pages = {2098--2109},
 
 @article{kassab2020federated,
   title={Federated Generalized Bayesian Learning via Distributed Stein Variational Gradient Descent},
-  author={Kassab, Rahif and Simeone, Osvaldo},
+  author={Kassab, R. and Simeone, O.},
   journal={arXiv preprint arXiv:2009.06419},
   year={2020}
 }
