--- a/main.tex
+++ b/main.tex
@@ -728,7 +728,7 @@ $
 
 
 Compared with the Langevin algorithm, whose complexity under LSI is
-	 $\tilde{\cO}(\frac{L^2d}{\lambda^2\epsilon})$ in terms of $\KL$, our complexity result $\tilde{\cO}\left(\frac{L{d}^{3/2}}{\lambda^{1/2}\varepsilon}\right)$ for SVGD applies under T1 only, which is weaker than LSI, see Table~\ref{tab:result}.  
+	 $\tilde{\cO}(\frac{L^2d}{\lambda^2\varepsilon})$ in terms of $\KL$, our complexity result $\tilde{\cO}\left(\frac{L{d}^{3/2}}{\lambda^{1/2}\varepsilon}\right)$ for SVGD applies under T1 only, which is weaker than LSI, see Table~\ref{tab:result}.  
 
 \begin{corollary}[Complexity]
 \label{cor:comp}
