arXiv version, updated

--- a/arxiv/math.bib
+++ b/arxiv/math.bib
@@ -5889,15 +5889,16 @@ MRREVIEWER = {Sorin-Mihai Grad},
 
 @book{villani2003topics,
   title={Topics in optimal transportation},
-  author={Villani, C.},
+  author={Villani,  C.},
+  series = {Graduate Studies in Mathematics},
   number={58},
   year={2003},
-  publisher={American Mathematical Soc.}
+  publisher={American Mathematical Society}
 }
 
 @book{villani2008optimal,
   title={Optimal transport: old and new},
-  author={Villani, C.},
+  author={Villani,  C.},
   volume={338},
   year={2008},
   publisher={Springer Science \& Business Media}
@@ -5909,8 +5910,7 @@ MRREVIEWER = {Sorin-Mihai Grad},
     AUTHOR = {Combettes, P. L. and Pesquet, J.-C.},
      TITLE = {Stochastic quasi-{F}ej\'er block-coordinate fixed point
               iterations with random sweeping},
-   JOURNAL = {SIAM J. Optim.},
-  FJOURNAL = {SIAM Journal on Optimization},
+  JOURNAL = {SIAM Journal on Optimization},
     VOLUME = {25},
       YEAR = {2015},
     NUMBER = {2},
