--- a/neurips2021/svgd-neurips2021.tex
+++ b/neurips2021/svgd-neurips2021.tex
@@ -836,7 +836,7 @@ Let Assumptions \ref{ass:V_Lipschitz}, \ref{ass:T1} and \ref{ass:k_bounded} hold
 \part*{Appendix: Complexity Analysis of Stein Variational Gradient Descent Under Talagrand's Inequality T1}
 
 
-\section{Proof of Propostion~\ref{ass:stationary}}
+\section{Proof of Proposition~\ref{ass:stationary}}
 
 First, we prove that $F$ is coercive, \textit{i.e.}, for every $C>0$, the set $S = \{x \in \X : F(x) \leq C\}$ is compact. Since $F$ is continuous, $S$ is closed. It remains to prove that $S$ is bounded. Assume, by contradiction, that $S$ is unbounded. Then, there exists a sequence $(x_n)$ of points in $\X$ such that $F(x_n) \leq C$, $\|x_n\| \to +\infty$ and $B(x_n) \cap B(x_m) = \emptyset$ for every $n \neq m$, where $B(x)$ denotes  the unit ball centered at $x$. 
 
