--- a/arxiv/svgd-arxiv.tex
+++ b/arxiv/svgd-arxiv.tex
@@ -1,21 +1,8 @@
-\documentclass{article}
+\documentclass[11pt]{article}
 
-% if you need to pass options to natbib, use, e.g.:
-\PassOptionsToPackage{numbers, sort&compress}{natbib}
-% before loading neurips_2021
+\usepackage[margin=1 in]{geometry}  
+\usepackage{natbib}  
 
-% ready for submission
-\usepackage{neurips_2021}
-
-% to compile a preprint version, e.g., for submission to arXiv, add add the
-% [preprint] option:
-%     \usepackage[preprint]{neurips_2021}
-
-% to compile a camera-ready version, add the [final] option, e.g.:
-%     \usepackage[final]{neurips_2021}
-
-% to avoid loading the natbib package, add option nonatbib:
-%    \usepackage[nonatbib]{neurips_2021}
 \usepackage{xcolor}         % colors
 
 
@@ -30,11 +17,7 @@
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{subfigure}
-\usepackage{booktabs} % for professional tables
-% hyperref makes hyperlinks in the resulting PDF.
-% If your build breaks (sometimes temporarily if a hyperlink spans a page)
-% please comment out the following usepackage line and replace
-% \usepackage{icml2020} with \usepackage[nohyperref]{icml2020} above.
+\usepackage{booktabs} 
 \usepackage{hyperref}
 \usepackage{times}		
 \usepackage[T1]{fontenc}
@@ -82,7 +65,7 @@
 
 
 \usepackage[textwidth=2cm, textsize=footnotesize]{todonotes}  
-%\setlength{\marginparwidth}{1.5cm}               %  this goes with todonoteshttps://fr.overleaf.com/project/5cc847f1dc86b619ccf2295b
+
 \newcommand{\prnote}[1]{\todo[color=cyan!]{#1}}
 \newcommand{\asnote}[1]{\todo[color=green!]{#1}}
 \newcommand{\lsnote}[1]{\todo[color=magenta]{#1}}
@@ -130,46 +113,13 @@
 
 
 
-\title{Complexity Analysis of Stein Variational Gradient Descent Under Talagrand's Inequality T1}
+\title{\bf Complexity Analysis of Stein Variational Gradient Descent \\ \bf Under Talagrand's Inequality T1}
 
-% The \author macro works with any number of authors. There are two commands
-% used to separate the names and addresses of multiple authors: \And and \AND.
-%
-% Using \And between authors leaves it to LaTeX to determine where to break the
-% lines. Using \AND forces a line break at that point. So, if LaTeX puts 3 of 4
-% authors names on the first line, and the last on the second line, try using
-% \AND instead of \And before the third author name.
 
-\author{%
-  David S.~Hippocampus\thanks{Use footnote for providing further information
-    about author (webpage, alternative address)---\emph{not} for acknowledging
-    funding agencies.} \\
-  Department of Computer Science\\
-  Cranberry-Lemon University\\
-  Pittsburgh, PA 15213 \\
-  \texttt{hippo@cs.cranberry-lemon.edu} \\
-  % examples of more authors
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \AND
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-}
+\author{Adil Salim\\KAUST\thanks{King Abdullah University of Science and Technology, Thuwal, Saudi Arabia} \and Lukang Sun\\KAUST \and Peter Richt\'{a}rik \\
+KAUST}
+
+\date{June 6, 2021}
 
 \begin{document}
 
@@ -178,6 +128,8 @@
 \begin{abstract}
   We study the complexity of Stein Variational Gradient Descent (SVGD), which is an algorithm to sample from $\pi(x) \propto \exp(-F(x))$ where $F$ smooth and nonconvex. We provide a clean complexity bound for SVGD in the population limit in terms of the Stein Fisher Information (or squared Kernelized Stein Discrepancy), as a function of the dimension of the problem $d$ and the desired accuracy $\varepsilon$. Unlike existing work, we do not make any assumption on the trajectory of the algorithm. Instead, our key assumption is that the target distribution satisfies Talagrand's inequality T1.
 \end{abstract}
+
+
 \section{Introduction}
 Sampling from a given target distribution $\pi$ is a fundamental task of many Machine Learning procedures. In Bayesian Machine Learning, the target distribution $\pi$ is known up to a multiplicative factor and often takes the form
 \begin{equation}
@@ -306,7 +258,7 @@ In this paper, we consider a target probability distribution $\pi$ proportional 
 \end{assumption}
 To specify the dependence in the dimension $d$ of our complexity bounds, we need the following proposition.
 \begin{proposition}
-\label{ass:stationary} Under Assumptions~\ref{ass:V_Lipschitz} ,
+\label{prop:stationary} Under Assumptions~\ref{ass:V_Lipschitz} ,
 there exists $x_\star \in \X$ for which $\nabla F(x_\star) = 0$, \textit{i.e.}, $F$ admits a stationary point.
 \end{proposition}
 
@@ -330,7 +282,7 @@ Indeed, the Wasserstein space can be endowed with a differential structure. In p
 The analysis of sampling algorithm in the case where $F$ is nonconvex often goes through functional inequalities.
 
 \begin{definition}[Logarithmic Sobolev Inequality (LSI)]
-The distribution $\pi$ satisfies the Logarithmic Sobolev Inequality if $\exists \lambda > 0$ s.t. for all $\mu \in \cP_2(\X)$, $\cF(\mu) \leq \frac{2}{\lambda}\|\nabla_W \cF(\mu)\|_{L^2(\mu)}^2$.
+The distribution $\pi$ satisfies the Logarithmic Sobolev Inequality if there exists $\lambda > 0$ such that  for all $\mu \in \cP_2(\X)$, $$\cF(\mu) \leq \frac{2}{\lambda}\|\nabla_W \cF(\mu)\|_{L^2(\mu)}^2.$$
 \end{definition}
 
 LSI is the key assumption in the analysis of Langevin algorithm in the case wheen $F$ is not convex~\cite{vempala2019rapid}.
@@ -391,7 +343,7 @@ where
 
 \begin{quote}\em In the population limit, SVGD can be seen as a Riemannian gradient descent, thanks to the following two reasons. \end{quote}
 
-First, in a Riemannian interpretation of the Wasserstein space~\cite{villani2008optimal}, for every $\mu \in \cP_2(\X)$, the map $\exp_{\mu} : \phi \mapsto (I + \phi)\#\mu$ can be seen as the exponential map at $\mu$. SVGD~\eqref{eq:svgdpopulation} can be rewritten as $\mu_{n+1} = \exp_{\mu_n}(-\gamma h_{\mu_n})$. 
+First, in a Riemannian interpretation of the Wasserstein space~\cite{villani2008optimal}, for every $\mu \in \cP_2(\X)$, the map $\exp_{\mu} : \phi \mapsto (I + \phi)\#\mu$ can be seen as the exponential map at $\mu$. SVGD~\eqref{eq:svgdpopulation} can be rewritten as $$\mu_{n+1} = \exp_{\mu_n}(-\gamma h_{\mu_n}).$$ 
 
 Second, $-h_{\mu}$ can be seen as the negative gradient of $\cF$ at $\mu$ under a certain metric. Indeed, using  integration by parts, $h_{\mu} = P_{\mu} \nabla_W \cF(\mu)$, see \textit{e.g.}~\cite{korba2020non,duncan2019geometry}. Therefore, for every $g \in \cH$, $\ps{h_{\mu},g}_{\cH} = \ps{\nabla_W \cF(\mu),g}_{L^2(\mu)}$, hence $h_{\mu}$ can be seen as a Wasserstein gradient of $\cF$ under the inner product of $\cH$.
 % SVGD can be interpreted as a Riemannian gradient descent thanks to two interpretations. First, the Wasserstein space can be interpreted as a Riemannian space~\cite{villani2008optimal} and the exponential map at $\mu$ is $\phi \mapsto (I + \phi)\#\mu$. Second, $\nabla \log \left(\frac{\mu}{\pi}\right)$ can be identified as $\nabla \cF(\mu)$ and $P_{\mu}\nabla \cF(\mu)$ is the ...
@@ -415,7 +367,7 @@ In this paper, we study the complexity of SVGD in terms of the Stein Fisher Info
 	
 % 	%Assume  that $\nabla \log \pi$ is $M$-Lipschitz : \\$\|\nabla \log \pi (x) - \nabla \log \pi(y)\|\le M \|x-y\|$ for any $x,y\in \X$.
 % 	\item \label{ass:T1} $\exists \lambda > 0$ s.t. for all $\mu \in \cP_1(\X)$,\asnote{Actually, we only need it for all $\mu \in \cP_2(\X)$? Check this. CHANGE THE DEFINITION OF THE CONSTANT!} $W_1(\mu,\pi) \leq \lambda \sqrt{\KL(\mu|\pi)}$.
-% 	\item 	\label{ass:stationary} $\exists x_\star \in \X$ s.t. $\nabla F(x_\star) = 0$ \textit{i.e.}, $F$ admits a stationary point.
+% 	\item 	\label{prop:stationary} $\exists x_\star \in \X$ s.t. $\nabla F(x_\star) = 0$ \textit{i.e.}, $F$ admits a stationary point.
 % \end{assumplist}
 % \setcounter{contlist}{\value{enumi}}
 % % \asnote{Can we extend outside of the population limit? no, locally sobolev}
@@ -490,8 +442,11 @@ Yet, the proof of our Proposition~\ref{prop:TL} is similar to the proof of \cite
 	and
 	\begin{align}
 	\label{eq:Jgbound}
-	\|Jg(x)\|_{\HS}^2&=\sum_{i,j=1}^d \left|\frac{\partial g_i(x)}{\partial x_j} \right|^2=\sum_{i,j=1}^d \ps{\partial_{x_j}k(x,.), g_i}_{\cH_0}^2\le \sum_{i,j=1}^d \| \partial_{x_j}k(x,.)\|^2_{\cH_0} \|g_i\|_{\cH_0}^2 \nonumber\\
-	&=\| \nabla k(x,.)\|^2_{\cH}\|g\|^2_{\cH}\le B^2 \|g\|^2_{\cH}.
+	\|Jg(x)\|_{\HS}^2&=\sum_{i,j=1}^d \left|\frac{\partial g_i(x)}{\partial x_j} \right|^2\nonumber\\
+	&=\sum_{i,j=1}^d \ps{\partial_{x_j}k(x,.), g_i}_{\cH_0}^2 \nonumber \\
+	&\le \sum_{i,j=1}^d \| \partial_{x_j}k(x,.)\|^2_{\cH_0} \|g_i\|_{\cH_0}^2 \nonumber\\
+	&=\| \nabla k(x,.)\|^2_{\cH}\|g\|^2_{\cH}\nonumber\\
+	&\le B^2 \|g\|^2_{\cH}.
 	\end{align}
     Hence, 
     \begin{equation}
@@ -524,7 +479,7 @@ $\varphi(0) = \cF(\mu_n)$ and $\varphi(\gamma) = \cF(\mu_{n+1})$.
         and $\varphi''(t) = \psi_1(t) + \psi_2(t)$, where\footnote{Equations~\eqref{eq:chainrule1} and~\eqref{eq:chainrule2} are the equations that would deserve more explanations. We only sketch the proof, see~\cite[Lemma 11]{korba2020non} more for details.}
         \begin{equation}
         \label{eq:chainrule2}
-        \psi_1(t) = \E_{x \sim \rho_t} \left[ \ps{w_t(x), H_F(x) w_t(x)}\right] \; \text{ and } \; \psi_2(t) = \E_{x \sim \rho_t} \left[ \|J w_t(x)\|_{\HS}^2 \right].
+        \psi_1(t) = \E_{x \sim \rho_t} \left[ \ps{w_t(x), H_F(x) w_t(x)}\right] \quad \text{and} \quad \psi_2(t) = \E_{x \sim \rho_t} \left[ \|J w_t(x)\|_{\HS}^2 \right].
         \end{equation}
         Recall that $w_t = -g \circ (\phi_t)^{-1}$.
     The first term $\psi_1(t)$ is bounded using the transfer lemma, \Cref{ass:V_Lipschitz} and Inequality~\eqref{eq:gbound}:
@@ -583,13 +538,15 @@ Using \Cref{ass:k_bounded}
         \|h_{\mu}\|_{\cH} &= \left\|\E_{x \sim \mu} \left(\nabla F(x)\Phi(x) - \nabla \Phi(x)\right) \right\|_{\cH} \\
         &\leq \E_{x \sim \mu} \left\| \nabla F(x)\Phi(x) - \nabla \Phi(x) \right\|_{\cH}\\
         &\leq \E_{x \sim \mu} \left\| \nabla F(x)\Phi(x)\right\|_{\cH} + \E_{x \sim \mu} \left\|\nabla \Phi(x) \right\|_{\cH}\\
-        &= \E_{x \sim \mu} \left\|\nabla F(x)\right\|\left\|\Phi(x)\right\|_{\cH} + \E_{x \sim \mu} \left\|\nabla \Phi(x) \right\|_{\cH} \leq B \left( \E_{x \sim \mu} \left\|\nabla F(x)\right\| + 1 \right).
+        &= \E_{x \sim \mu} \left\|\nabla F(x)\right\|\left\|\Phi(x)\right\|_{\cH} + \E_{x \sim \mu} \left\|\nabla \Phi(x) \right\|_{\cH} \\
+        & \leq B \left( \E_{x \sim \mu} \left\|\nabla F(x)\right\| + 1 \right).
     \end{align*}
     
 Using \Cref{ass:V_Lipschitz}, $\|\nabla F(x)\| \leq \|\nabla F(0)\| + L\|x\|$. Therefore, using the triangle inequality for the metric $W_1$,
     \begin{align*}
         \|h_{\mu}\|_{\cH} &\leq B \left(1 + \|\nabla F(0)\| + L\int \|x\|d\mu(x) \right)\\
-        &= B \left(1 + \|\nabla F(0)\| + L W_1(\mu,\delta_0) \right) \leq B \left(1 + \|\nabla F(0)\| + L W_1(\pi,\delta_0) \right) + BL W_1(\mu,\pi).
+        &= B \left(1 + \|\nabla F(0)\| + L W_1(\mu,\delta_0) \right) \\
+        & \leq B \left(1 + \|\nabla F(0)\| + L W_1(\pi,\delta_0) \right) + BL W_1(\mu,\pi).
     \end{align*}
 We obtain the first inequality using \Cref{ass:T1}: $W_1(\mu,\pi) \leq  \sqrt{\frac{2\cF(\mu)}{\lambda}}$.
 
@@ -597,7 +554,7 @@ To prove the second inequality, recall that
 $
 \|h_\mu\|_{\cH} \leq B \left( \E_{x \sim \mu} \left\|\nabla F(x)\right\| + 1 \right).
 $
-Using \Cref{ass:V_Lipschitz} and \ref{ass:stationary}, $\|\nabla F(x)\| = \|\nabla F(x) - \nabla F(x_\star)\| \leq L\|x- x_\star\|$. Therefore, using the triangle inequality for the metric $W_1$,
+Using \Cref{ass:V_Lipschitz} and \Cref{prop:stationary}, $\|\nabla F(x)\| = \|\nabla F(x) - \nabla F(x_\star)\| \leq L\|x- x_\star\|$. Therefore, using the triangle inequality for the metric $W_1$,
 \begin{align*}
     \int \|x-x_\star\|d\mu(x) = W_1(\mu,\delta_{x_\star}) & \leq W_1(\mu,\pi) + W_1(\pi,\mu_0) + W_1(\mu_0,\delta_{x_\star})\\
     &\leq \sqrt{\frac{2\cF(\mu_0)}{\lambda}} + \sqrt{\frac{2\cF(\mu)}{\lambda}} + W_1(\mu_0,\delta_{x_\star}).
@@ -760,118 +717,46 @@ Let Assumptions \ref{ass:V_Lipschitz}, \ref{ass:T1} and \ref{ass:k_bounded} hold
 % \end{theorem}
 
 %\asnote{unbiasedness, complexity, computation of full gradient at the beginning}
+
 \bibliographystyle{plainnat}
 \bibliography{math}
-
-\clearpage
-\section*{Checklist}
-
-\begin{enumerate}
-
-\item For all authors...
-\begin{enumerate}
-  \item Do the main claims made in the abstract and introduction accurately reflect the paper's contributions and scope?
-    \answerYes{}
-  \item Did you describe the limitations of your work?
-    \answerYes{} : Our main limitation is that we study SVGD \textit{in the population limit}, this is explicitly stated in the abstract, in the contributions (Section~\ref{sec:contrib}) and in the presentation of SVGD (Section~\ref{sec:svgd-desc}). 
-    
-  \item Did you discuss any potential negative societal impacts of your work?
-    \answerNA{} : Our work is of theoretical nature and we do not see any societal impact of our results.
-  \item Have you read the ethics review guidelines and ensured that your paper conforms to them?
-    \answerYes{}
-\end{enumerate}
-
-\item If you are including theoretical results...
-\begin{enumerate}
-  \item Did you state the full set of assumptions of all theoretical results?
-    \answerYes{}
-	\item Did you include complete proofs of all theoretical results?
-    \answerYes{}
-\end{enumerate}
-
-\item If you ran experiments...
-\begin{enumerate}
-  \item Did you include the code, data, and instructions needed to reproduce the main experimental results (either in the supplemental material or as a URL)?
-    \answerNA{}
-  \item Did you specify all the training details (e.g., data splits, hyperparameters, how they were chosen)?
-    \answerNA{}
-	\item Did you report error bars (e.g., with respect to the random seed after running experiments multiple times)?
-    \answerNA{}
-	\item Did you include the total amount of compute and the type of resources used (e.g., type of GPUs, internal cluster, or cloud provider)?
-    \answerNA{}
-\end{enumerate}
-
-\item If you are using existing assets (e.g., code, data, models) or curating/releasing new assets...
-\begin{enumerate}
-  \item If your work uses existing assets, did you cite the creators?
-    \answerNA{}
-  \item Did you mention the license of the assets?
-    \answerNA{}
-  \item Did you include any new assets either in the supplemental material or as a URL?
-    \answerNA{}
-  \item Did you discuss whether and how consent was obtained from people whose data you're using/curating?
-    \answerNA{}
-  \item Did you discuss whether the data you are using/curating contains personally identifiable information or offensive content?
-    \answerNA{}
-\end{enumerate}
-
-\item If you used crowdsourcing or conducted research with human subjects...
-\begin{enumerate}
-  \item Did you include the full text of instructions given to participants and screenshots, if applicable?
-    \answerNA{}
-  \item Did you describe any potential participant risks, with links to Institutional Review Board (IRB) approvals, if applicable?
-    \answerNA{}
-  \item Did you include the estimated hourly wage paid to participants and the total amount spent on participant compensation?
-    \answerNA{}
-\end{enumerate}
-
-\end{enumerate}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \clearpage
 \appendix
 
-\part*{Appendix: Complexity Analysis of Stein Variational Gradient Descent Under Talagrand's Inequality T1}
+\part*{Appendix}
 
 
-\section{Proof of Propostion~\ref{ass:stationary}}
+\section{Proof of Proposition~\ref{prop:stationary}}
 
-First, we prove that $F$ is coercive, \textit{i.e.}, for every $C>0$, the set $S = \{x \in \sX : F(x) \leq C\}$ is compact. 
-
-Since $F$ is continuous, $S$ is closed. It remains to prove that $S$ is bounded. 
-
-Assume that $S$ is not bounded. Then, there exists a sequence $(x_n)$ of points in $\X$ such that $F(x_n) \leq C$, $\|x_n\| \to +\infty$ and $B(x_n) \cap B(x_m) = \emptyset$ for every $n \neq m$, where $B(x)$ denotes and the unit ball centered at $x$. 
+First, we prove that $F$ is coercive, \textit{i.e.}, for every $C>0$, the set $S = \{x \in \X : F(x) \leq C\}$ is compact. Since $F$ is continuous, $S$ is closed. It remains to prove that $S$ is bounded. Assume, by contradiction, that $S$ is unbounded. Then, there exists a sequence $(x_n)$ of points in $\X$ such that $F(x_n) \leq C$, $\|x_n\| \to +\infty$ and $B(x_n) \cap B(x_m) = \emptyset$ for every $n \neq m$, where $B(x)$ denotes  the unit ball centered at $x$. 
 
 Let $n \geq 0$. Using the smoothness of $F$ (\Cref{ass:V_Lipschitz}), for every $x \in B(x_n)$,
 \begin{equation*}
     F(x) \leq F(x_n) + \ps{\nabla F(x_n),x-x_n} + \frac{L}{2}.
 \end{equation*}
-Denote by $V$ the volume of the unit ball centered at $x$, \textit{i.e.} its Lebesgue measure. The positive number $V$ does not depend on $x$.
+Denote by $V$ the volume of the unit ball centered at $x$, \textit{i.e.} its Lebesgue measure. The positive number $V$ does not depend on $x$. Then
 
-\begin{align*}
-    &\int_{B(x_n)} \exp(-F(x))dx \\
-    \geq& \int_{B(x_n)} \exp \left(-F(x_n) -\ps{\nabla F(x_n),x-x_n} - \frac{L}{2}\right)dx \\
-    =& V \exp \left(-F(x_n)-\frac{L}{2}\right) \int_{B(x_n)} \exp\left(\ps{\nabla F(x_n),x_n-x}\right)\frac{dx}{V}\\
-    =& V \exp \left(-F(x_n)-\frac{L}{2}\right) \int_{B(0)} \exp\left(\ps{\nabla F(x_n),u}\right)\frac{du}{V}\\
-    \geq& V \exp \left(-F(x_n)-\frac{L}{2}\right)  \exp\left( \int_{B(0)} \ps{\nabla F(x_n),u} \frac{du}{V}\right)\\
-    =& V \exp \left(-F(x_n)-\frac{L}{2}\right)\\
-    \geq& V \exp \left(-C-\frac{L}{2}\right).
-\end{align*}
-where we used Jensen's inequality for the uniform distribution over $B(0)$, thanks to the convexity of $\exp$. Finally, 
+\begin{eqnarray*}
+  \int_{B(x_n)} \exp(-F(x))dx & \geq & \int_{B(x_n)} \exp \left(-F(x_n) -\ps{\nabla F(x_n),x-x_n} - \frac{L}{2}\right)dx \\
+   & =& V \exp \left(-F(x_n)-\frac{L}{2}\right) \int_{B(x_n)} \exp\left(\ps{\nabla F(x_n),x_n-x}\right)\frac{dx}{V}\\
+    &=& V \exp \left(-F(x_n)-\frac{L}{2}\right) \int_{B(0)} \exp\left(\ps{\nabla F(x_n),u}\right)\frac{du}{V}\\
+   & \geq& V \exp \left(-F(x_n)-\frac{L}{2}\right)  \exp\left( \int_{B(0)} \ps{\nabla F(x_n),u} \frac{du}{V}\right)\\
+   & =& V \exp \left(-F(x_n)-\frac{L}{2}\right)\\
+   & \geq& V \exp \left(-C-\frac{L}{2}\right),
+\end{eqnarray*}
+where we used Jensen's inequality for the uniform distribution over $B(0)$, thanks to the convexity of $t\mapsto \exp(t)$. Finally, 
 \begin{equation*}
-\int \exp(-F(x))dx \geq \sum_{n = 0}^{\infty} \int_{B(x_n)} \exp(-F(x))dx \geq \sum_{n = 0}^{\infty} V \exp \left(-C-\frac{L}{2}\right) = +\infty.
+\int \exp(-F(x))dx \geq \sum_{n = 0}^{\infty} \int_{B(x_n)} \exp(-F(x))dx \geq \sum_{n = 0}^{\infty} V \exp \left(-C-\frac{L}{2}\right) = +\infty,
 \end{equation*}
-and $\exp(-F)$ is not integrable. This contradicts the definition of $F$. Therefore, $S$ is bounded.
+which means that $\exp(-F)$ is not integrable. This contradicts the definition of $F$ and therefore, $S$ is bounded.
 
-Finally, the set $S$ is compact and $F$ is coercive. Consequently, $F$ admits a stationary point.
-
-Indeed, $F$ is continuous over the compact set $\{x \in \sX : F(x) \leq 1\}$, therefore, $F$ admits a minimizer $x_\star$ over this set. Moreover, this point $x_\star$ is a stationary point \textit{i.e.}, $\nabla F(x_\star) = 0$ (note that the point $x_\star$ is actually a global minimizer of $F$).
+Next, since the set $S$ is compact,  $F$ is coercive, and hence $F$ admits a stationary point. Indeed, $F$ is continuous over the compact set $\{x \in \X : F(x) \leq 1\}$, and therefore, $F$ admits a minimizer, $x_\star$, over this set. Moreover, this point $x_\star$ is a stationary point \textit{i.e.}, $\nabla F(x_\star) = 0$ (note that the point $x_\star$ is actually a global minimizer of $F$).
 
 %	\Sun{
 %	
-%	\section{Proof of Propostion~\ref{ass:stationary}}
+%	\section{Proof of Propostion~\ref{prop:stationary}}
 %	\lsnote{Check this proof (should be OK)}
 %	\asnote{I rewrote this proof above so we can discard it.}
 %	First prove as $|x|\mapsto +\infty$, $F\mapsto +\infty$: if not, then there is a sequence $\{x_n\}, |x_n|\mapsto +\infty$, but $F(x_n)\leq C$, since under Assumption \ref{ass:V_Lipschitz}, $\nabla F$ is $L-Lipschitz$, so
@@ -903,7 +788,7 @@ Indeed, $F$ is continuous over the compact set $\{x \in \sX : F(x) \leq 1\}$, th
 %     The proof of Corollary~\ref{cor:comp} relies on the following 2nd version of Theorem~\ref{th:svgd}.
 %     \begin{theorem}
 % \label{th:svgd2}
-%   Let Assumptions \ref{ass:k_bounded}, \ref{ass:V_Lipschitz}, \ref{ass:T1} and \ref{ass:stationary} hold true. Let $\alpha > 1$ and choose $\gamma > 0$ such that 
+%   Let Assumptions \ref{ass:k_bounded}, \ref{ass:V_Lipschitz}, \ref{ass:T1} and \ref{prop:stationary} hold true. Let $\alpha > 1$ and choose $\gamma > 0$ such that 
 %   \begin{equation}
 %   \label{eq:condition-step-2}
 %       \gamma \leq (\alpha-1)\left(\alpha B^2 \left(1 + 2L\lambda \sqrt{\cF(\mu_0)} + L W_1(\mu_0,\delta_{x_\star})\right)\right)^{-1}.
@@ -925,9 +810,9 @@ Using Corollary~\ref{cor:conv}, if
       \gamma \leq \min\left((\alpha-1)\left(\alpha B^2 \left(1 + 2L\sqrt{\frac{2\cF(\mu_0)}{\lambda}} + L \int \|x-x_\star\|d\mu_0(x))\right)\right)^{-1},\frac{2}{B (\alpha^2 + L)}\right),
   \end{equation*}
   then, denoting $p = \argmin_{k \in \{0,\ldots,n-1\}} I_{\st}(\mu_k|\pi)$,
-  \begin{equation}
+  \begin{equation*}
       I_{\st}(\mu_p|\pi) \leq \frac{1}{n} \sum_{k=0}^{n-1} I_{\st}(\mu_k|\pi) \leq \frac{2\cF(\mu_0)}{n \gamma}.
-  \end{equation}
+  \end{equation*}
 % then,
 %     \begin{equation}
 %     \label{eq:TLproof}
@@ -941,13 +826,13 @@ Using Corollary~\ref{cor:conv}, if
 % and any $\gamma >0$ satisfying~\eqref{eq:condition-step-2} satisfies~\eqref{eq:condition-step-n}, therefore~\eqref{eq:TLproof} holds.
 % \end{proof}
 Using~\cite[Lemma 1]{vempala2019rapid}, $\cF(\mu_0) \leq F(x_\star) + \frac{d}{2}\log \left(\frac{L}{2\pi}\right)$. Besides,
-\begin{equation}
+\begin{equation*}
     \int \|x-x_\star\|d\mu_0(x) = \E_{X \sim \mu_0} \|X - x_\star\| = \frac{1}{\sqrt{L}} \E_{X \sim \mu_0} \|\sqrt{L}(X - x_\star)\|,
-\end{equation}
+\end{equation*}
 and using the transfer lemma and Cauchy-Schwartz inequality,
-\begin{equation}
+\begin{equation*}
     \int \|x-x_\star\|d\mu_0(x) = \frac{1}{\sqrt{L}} \E_{Y \sim \cN(0,I)} \|Y\| \leq \frac{1}{\sqrt{L}} \left(\E_{Y \sim \cN(0,I)} \|Y\|^2\right)^{1/2} = \sqrt{\frac{d}{L}}.
-\end{equation}
+\end{equation*}
 Therefore,
 \begin{align*}
     &(\alpha-1)\left(\alpha B^2 \left(1 + 2L\sqrt{\frac{2\cF(\mu_0)}{\lambda}} + L \int \|x-x_\star\|d\mu_0(x))\right)\right)^{-1} \\
@@ -955,14 +840,14 @@ Therefore,
     =& \tilde{\Omega}\left(\frac{1}{\frac{L\sqrt{d}}{\sqrt{\lambda}} + \sqrt{Ld}}\right),
 \end{align*}
 and 
-\begin{equation}
+\begin{equation*}
     \gamma^{-1} = \tilde{\cO}\left(\frac{L\sqrt{d}}{\sqrt{\lambda}} + \sqrt{Ld} + L\right) = \tilde{\cO}\left(\frac{L\sqrt{d}}{\sqrt{\lambda}}\right).
-\end{equation}
+\end{equation*}
 Since $\cF(\mu_0) = \tilde{\cO}(d)$,
-\begin{equation}
+\begin{equation*}
     \frac{\cF(\mu_0)}{\gamma} = \tilde{\cO}\left(\frac{L{d}^{3/2}}{\sqrt{\lambda}}\right).
-\end{equation}
-Let $\varepsilon > 0$. To output $\mu_p$ such that $I_{\st}(\mu_p|\pi) < \varepsilon$, it suffices to ensure that $\frac{2\cF(\mu_0)}{n\gamma} < \varepsilon$, therefore, $\frac{2\cF(\mu_0)}{\gamma \varepsilon} = \tilde{\Omega}\left(\frac{L{d}^{3/2}}{\varepsilon\sqrt{\lambda}}\right)$ iterations are sufficient.
+\end{equation*}
+Let $\varepsilon > 0$. To output $\mu_p$ such that $I_{\st}(\mu_p|\pi) < \varepsilon$, it suffices to ensure that $\frac{2\cF(\mu_0)}{n\gamma} < \varepsilon$. Therefore, $\frac{2\cF(\mu_0)}{\gamma \varepsilon} = \tilde{\Omega}\left(\frac{L{d}^{3/2}}{\varepsilon\sqrt{\lambda}}\right)$ iterations are sufficient.
 
 
 
